fixing spacing

--- a/src/pages/home/Home.modules.css
+++ b/src/pages/home/Home.modules.css
@@ -15,7 +15,7 @@
 .header {
     display: flex;
     flex-direction: row;
-    gap: 16px;
+    gap: 8px;
     justify-content: flex-start;
     padding-top: 2vh;
     margin-left: 10vw;
